# capit

./: .gitignore  Cargo.toml  README.md
crates/capit/: Cargo.toml
crates/capit-bar/: Cargo.toml
crates/capit-bar/src/: capture.rs  ipc.rs  main.rs  print.rs
crates/capit-bar/src/bar/: app.rs  colour.rs  mod.rs  pixels.rs  render.rs  shm.rs
crates/capit-core/: Cargo.toml
crates/capit-core/src/: error.rs  job.rs  lib.rs  mode.rs  output.rs  rect.rs  target.rs
crates/capit-ipc/: Cargo.toml
crates/capit-ipc/src/: client.rs  error.rs  framing.rs  lib.rs  protocol.rs  server.rs
crates/capit/src/: cli.rs  logging.rs  main.rs  paths.rs
crates/capit/src/bar/: app.rs  icons.rs  mod.rs  run.rs  shm.rs
crates/capit/src/client/: capture.rs  ipc.rs  mod.rs  print.rs  run.rs
crates/capitd/: Cargo.toml
crates/capitd/src/: capture.rs  config.rs  daemon.rs  logging.rs  main.rs  overlay_region.rs  portal_window.rs  selection.rs  wayland_outputs.rs
crates/capitd/src/daemon/: args.rs  handlers.rs  instance_lock.rs  mod.rs  notify.rs  paths.rs  server.rs  session.rs  state.rs
crates/capitd/src/overlay_region/: app.rs  mod.rs  model.rs  pixels.rs  render.rs  run.rs  shm.rs  surfaces.rs
crates/capitd/src/overlay_screen/: app.rs  mod.rs  render.rs  shm.rs  surfaces.rs
examples/: capit.rune
