[package]
name = "capit-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
capit-core = { path = "../capit-core/" }
capit-ipc = { path = "../capit-ipc/" }

eventline = "0.6.1"
memmap2 = "0.9.10"
once_cell = "1.21.3"
resvg = "0.47.0"
smithay-client-toolkit = "0.20.0"
tempfile = "3.25.0"
tiny-skia = "0.12.0"
usvg = "0.47.0"
wayland-client = "0.31.12"
wayland-protocols-wlr = "0.3.10"
wayland-cursor = "0.31.12"
