[package]
name = "capit"
version = "0.1.0"
edition = "2024"

[dependencies]
capit-core = { path = "../capit-core", features = ["clap"] }
capit-ipc  = { path = "../capit-ipc" }

clap = { version = "4.5.58", features = ["derive"] }
eventline = "0.6.1"
memmap2 = "0.9.10"
once_cell = "1.21.3"
resvg = "0.47.0"
smithay-client-toolkit = "0.20.0"   # match what you already use in daemon if possible
tempfile = "3.25.0"
tiny-skia = "0.12.0"
usvg = "0.47.0"
wayland-cursor = "0.31.12"
wayland-client = "0.31.12"
wayland-protocols-wlr = "0.3.10"


