[package]
name = "capitd"
version = "0.1.0"
edition = "2024"

[dependencies]
capit-core = { path = "../capit-core" }
capit-ipc  = { path = "../capit-ipc" }

async-io = "2.6.0"
clap = { version = "4.5.60", features = ["derive"] }
eventline = "0.7.2"
futures-util = "0.3.31"
image = "0.25.9"
libc = "0.2.182"
memmap2 = "0.9.10"
rune-cfg = "0.4.2"
smithay-client-toolkit = "0.20.0"
tempfile = "3.25.0"
url = "2.5.8"
wayland-cursor = "0.31.12"
wayland-client = "0.31.12"
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
zbus = { version = "5.13.2", features = ["blocking"] }
zvariant = "5.9.2"
